อธิบายสิ่งที่แก้ เช่น: fix preview modal & update styles

--- a/consistency.html
+++ b/consistency.html
@@ -315,7 +315,7 @@
           </section>
 
           <section class="block" id="end-of-verify">
-            <div class="block-title">End of Verify</div>
+            <div class="block-title">End of Calribration</div>
             <table class="kv">
               <colgroup>
                 <col class="kv-th"><col class="kv-td"><col class="kv-th"><col class="kv-td">
